Relative value wrapping and operator fix. Slot selector changes.

--- a/wled00/data/index.css
+++ b/wled00/data/index.css
@@ -731,7 +731,7 @@ select/*, .sel-p, .sel-pl, .sel-ple*/ {
   text-align: center;
 }
 .cl {
-	width: 42px;
+	background-color: #000;
 }
 .sel-p {
 	margin: 5px 0 10px;
@@ -853,6 +853,7 @@ input[type=number]::-webkit-outer-spin-button {
 	width: 44px;
 	height: 44px;
 	margin: 5px;
+	/*box-shadow: 0 0 0 2px #fff;*/
 }
 
 .xxs-w {
@@ -860,6 +861,7 @@ input[type=number]::-webkit-outer-spin-button {
 	margin: 2px;
 	width: 50px;
 	height: 50px;
+	/*box-shadow: 0 0 0 5px #fff;*/
 }
 
 .qcs, .xxs, #namelabel {
